--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -261,25 +261,25 @@
     <Content Include="Content\nav-bar.css" />
     <Content Include="Content\index.css" />
     <Content Include="Content\search-images.css" />
-    <Content Include="Content\SingleImages\SL373229.JPG" />
-    <Content Include="Content\SingleImages\SL373229_preview.JPG" />
-    <Content Include="Content\SingleImages\SL373233.JPG" />
-    <Content Include="Content\SingleImages\SL373233_preview.jpg" />
-    <Content Include="Content\SingleImages\SL373235.JPG" />
-    <Content Include="Content\SingleImages\SL373235_preview.jpg" />
-    <Content Include="Content\SingleImages\SL373481.JPG" />
-    <Content Include="Content\SingleImages\SL373481_preview.jpg" />
-    <Content Include="Content\SingleImages\SL373530.JPG" />
-    <Content Include="Content\SingleImages\SL373530_preview.jpg" />
-    <Content Include="Content\SingleImages\SL373554.JPG" />
-    <Content Include="Content\SingleImages\SL373554_preview.jpg" />
-    <Content Include="Content\SingleImages\SL373668.JPG" />
-    <Content Include="Content\SingleImages\SL373668_preview.jpg" />
-    <Content Include="Content\SingleImages\SL373669.JPG" />
-    <Content Include="Content\SingleImages\SL373669_preview.jpg" />
-    <Content Include="Content\SingleImages\SL373688.JPG" />
+    <Content Include="Content\DBImages\SL373229.JPG" />
+    <Content Include="Content\DBImages\SL373229_preview.JPG" />
+    <Content Include="Content\DBImages\SL373233.JPG" />
+    <Content Include="Content\DBImages\SL373233_preview.jpg" />
+    <Content Include="Content\DBImages\SL373235.JPG" />
+    <Content Include="Content\DBImages\SL373235_preview.jpg" />
+    <Content Include="Content\DBImages\SL373481.JPG" />
+    <Content Include="Content\DBImages\SL373481_preview.jpg" />
+    <Content Include="Content\DBImages\SL373530.JPG" />
+    <Content Include="Content\DBImages\SL373530_preview.jpg" />
+    <Content Include="Content\DBImages\SL373554.JPG" />
+    <Content Include="Content\DBImages\SL373554_preview.jpg" />
+    <Content Include="Content\DBImages\SL373668.JPG" />
+    <Content Include="Content\DBImages\SL373668_preview.jpg" />
+    <Content Include="Content\DBImages\SL373669.JPG" />
+    <Content Include="Content\DBImages\SL373669_preview.jpg" />
+    <Content Include="Content\DBImages\SL373688.JPG" />
     <Content Include="Content\single-image-details.css" />
-    <Content Include="Content\SingleImages\SL373688_preview.jpg" />
+    <Content Include="Content\DBImages\SL373688_preview.jpg" />
     <Content Include="Content\top-image.css" />
     <Content Include="Content\travels.css" />
     <Content Include="favicon.ico" />
