--- a/TravelAlbum.Models/TravelAlbum.Models.csproj
+++ b/TravelAlbum.Models/TravelAlbum.Models.csproj
@@ -57,8 +57,8 @@
     <Compile Include="Language.cs" />
     <Compile Include="Mountain.cs" />
     <Compile Include="MountainTranslationalInfo.cs" />
-    <Compile Include="SingleImage.cs" />
-    <Compile Include="SingleImageTranslationalInfo.cs" />
+    <Compile Include="Image.cs" />
+    <Compile Include="ImageTranslationalInfo.cs" />
     <Compile Include="Travel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Comment.cs" />
