--- a/TravelAlbum.Web/Web.config
+++ b/TravelAlbum.Web/Web.config
@@ -12,7 +12,7 @@
     <!--add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelAlbum-20170918121839.mdf;Initial Catalog=aspnet-TravelAlbum-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="TravelAlbum" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB;Integrated Security=True" providerName="System.Data.SqlClient" /-->
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB_SIT;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
