--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -231,7 +231,7 @@
     <Compile Include="Models\CommentModels\AddCommentInputModel.cs" />
     <Compile Include="Models\CommentModels\CommentViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\InputViewModels\CreateTravelInputModel.cs" />
+    <Compile Include="Models\TravelModels\TravelInputModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ImageModels\ImagesListViewModel.cs" />
     <Compile Include="Models\ImageModels\LatestImagesOutputModel.cs" />
@@ -373,6 +373,10 @@
     <ProjectReference Include="..\TravelAlbum.Data\TravelAlbum.Data.csproj">
       <Project>{b089a7ee-2f93-4921-9a56-10fcd37914ca}</Project>
       <Name>TravelAlbum.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TravelAlbum.IntermediaryModels\TravelAlbum.IntermediaryModels.csproj">
+      <Project>{f2bd3c97-72c4-47f8-a796-89a268c8c0cf}</Project>
+      <Name>TravelAlbum.IntermediaryModels</Name>
     </ProjectReference>
     <ProjectReference Include="..\TravelAlbum.Models\TravelAlbum.Models.csproj">
       <Project>{51a4d86b-6c8e-493a-8883-f316f8983274}</Project>
