--- a/TravelAlbum.Web/Web.config
+++ b/TravelAlbum.Web/Web.config
@@ -23,7 +23,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2"  maxRequestLength="1048576" />    
     <customErrors mode="Off" />
     <globalization uiCulture="bg" />
     <httpModules>
@@ -38,6 +38,11 @@
        </scripting>
    </system.web.extensions>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1073741824" />
+      </requestFiltering>
+    </security>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
