--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -252,6 +252,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\comments.css" />
+    <Content Include="Content\DBImages\SL373490.JPG" />
+    <Content Include="Content\DBImages\SL373498.JPG" />
+    <Content Include="Content\DBImages\SL373503.JPG" />
+    <Content Include="Content\DBImages\SL373514.JPG" />
     <Content Include="Content\Images\bg_flag.jpg" />
     <Content Include="Content\Images\close.png" />
     <Content Include="Content\Images\en_flag.jpg" />
