Background images changed according to the view which is opened, new BackgroundData propety added to images, travel and account output models to be used for passing the backgrund image data to the view, styles f the image detals page amended, method for getting file in utils added in order the File.IO to be mocked, new DB content images added

--- a/TravelAlbum.Data/TravelAlbum.Data.csproj
+++ b/TravelAlbum.Data/TravelAlbum.Data.csproj
@@ -67,7 +67,7 @@
     <Compile Include="TravelAlbumEfDbContextSaveChanges.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Migrations\App.config" />
     <None Include="packages.config" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
