Translations added, changes to the seeding added, search images view styles amended, basics of the facebook authentication added

--- a/TravelAlbum.Web/Web.config
+++ b/TravelAlbum.Web/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelAlbum-20170918121839.mdf;Initial Catalog=aspnet-TravelAlbum-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="TravelAlbum" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB;Integrated Security=True" providerName="System.Data.SqlClient" /-->
+    <add name="DefaultConnection" connectionString="Data Source=91.215.216.110\MSSQL2016,2016;Persist Security Info=False;User ID=travela;Password=Cwvf681#;Initial Catalog=TraveAlbumDb;Integrated Security=true" providerName="System.Data.SqlClient" /-->
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
