--- a/TravelAlbum.Data/Web.config
+++ b/TravelAlbum.Data/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelAlbum-20170918121839.mdf;Initial Catalog=aspnet-TravelAlbum-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" /-->
+    <!--add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelAlbum-20170918121839.mdf;Initial Catalog=aspnet-TravelAlbum-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=91.215.216.110\MSSQL2016,2016;Persist Security Info=False;User ID=travela;Password=Cwvf681#;Initial Catalog=TraveAlbumDb;Integrated Security=true" providerName="System.Data.SqlClient" /-->
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
