--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -305,13 +305,16 @@
     </Content>
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
     <None Include="Properties\PublishProfiles\TravelAlbum - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\travelalbum.eu - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Custom\comments-controller.js" />
     <Content Include="Scripts\Custom\fancybox-options.js" />
     <Content Include="Scripts\Custom\images-loader-section.js" />
     <Content Include="Scripts\Custom\single-images-loader.js" />
     <Content Include="Scripts\Custom\travels-loader.js" />
+    <Content Include="Scripts\facebook-auth.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
