Smaller version of the earchImages background image added

--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -259,6 +259,7 @@
     <Content Include="Content\DBImages\SL373577.JPG" />
     <Content Include="Content\DBImages\SL373577_preview.jpg" />
     <Content Include="Content\DBImages\SL373580.JPG" />
+    <Content Include="Content\DBImages\SL373580_preview.jpg" />
     <Content Include="Content\Images\bg_flag.jpg" />
     <Content Include="Content\Images\close.png" />
     <Content Include="Content\Images\en_flag.jpg" />
